# MemoFlow

./: .dockerignore  .env.template  .gitignore  AUTHORS  Dockerfile  README.md  README.md.back  celerybeat-schedule  docker-compose.debug.yml  docker-compose.yml  jsconfig.json  requirements.txt  setup.cfg  setup.py
data/diary_log/: diary_log.db  index.html  log.js  review.html  test.html
data/diary_log_lrx/: index.html  log.js
data/diary_log_second/: index.html  log.js
data/predict_image/: index.html
data/test_demo/: test.html
docker-compose-files/: docker-compose-chroma.yml  docker-compose-local.yml  docker-compose-no-verctor-search.yml  docker-compose.debug.yml  docker-compose.yml
docker-compose-files/local/: docker-compose-local-chroma-clash-debug.yml  docker-compose-local-chroma-clash.yml  docker-compose-local-chroma.yml  docker-compose-local.yml
docs/: docker_deployment_approach.md  linux_deployment_approach.md  memoflow_configuration.md  sync_config.md  usage.md  vector_search.md
etc/memocard/: api-paste.ini  web-dl.conf
etc/memoflow/: api-paste.ini  memoflow.conf
etc/web_dl/: api-paste.ini  api-paste.ini.back  web-dl.conf
memocard/api/: jianguoyun_api.py  notion_api.py
memocard/cmd/: api.py  celery_work  main  run.sh  run_debug.sh
memocard/conf/: __init__.py  server.py
memocard/core/: backends.py  factory_router.py  log_util.py
memocard/db/: __init__.py  diary_log_second.py
memocard/middleware/: middleware.py  versionfilter.py
memocard/tasks/: celery_task.py
memoflow/api/: azure_openai_api.py  db_page_payload.py  github_api.py  jianguoyun_api.py  notion_api.py  openai_api.py
memoflow/cmd/: api.py  celery_work  main  run.sh  run_debug.sh
memoflow/conf/: __init__.py  api.py  diary_log.py  diary_log_second.py  server.py
memoflow/core/: backends.py  factory_router.py  (+4 more)
traefik-docker-compose/: docker-compose.yml
web_dl/: ConfigParse.py  LICENSE  factory_router.py  handler.py  log_util.py  web_dl.py  wsgi.py
(+197 files in other folders)
