[metadata]
name = memoflow
version = 0.1
description-file = README.md
author = Hollis
author-email = l2830942138@gmail.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

[files]
packages =
    memoflow

[entry_points]
console_scripts =
    memoflow = memoflow.cmd.api:main
