[metadata]
name = memoflow
version = 0.0.1
description_file = README.md
author = Hollis
author_email = l2830942138@gmail.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

# [files]
# packages =
#     memoflow

[options]
packages = find_namespace:

[options.packages.find]
include = memoflow.*


[entry_points]
console_scripts =
    memoflow = memoflow.cmd.api.main:main
    celery_task = memoflow.cmd.celery_task:main

memoflow.app.diary_log.driver =
    driver = memoflow.app.diary_log.driver.backend:DiaryLogDriver